[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Pumpkin.gd" type="Script" id=1]
[ext_resource path="res://Sprites/calabaza.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Carteles/Cartel_Calabaza.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mont.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Pixel Cowboy.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Sounds/ShieldUp.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.9865, 30 )

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Vegetable" type="Area2D" index="0"]

position = Vector2( 496.594, 565.09 )
z_index = -1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 33
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index" ]

[node name="Plantado" type="Sprite" parent="." index="0"]

position = Vector2( -6.59399, 14.91 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Region", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 3.40601, 14.91 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 20.0
one_shot = true
autostart = false

[node name="SinPlantar" type="Sprite" parent="." index="3"]

position = Vector2( 3.40601, 4.90997 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Creciendo" type="Sprite" parent="." index="4"]

position = Vector2( 3.40601, 24.91 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -22.0
margin_top = 44.0
margin_right = 41.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ShieldUp" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_Vegetable_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_Vegetable_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


